<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">番职e家</string>
	<string name="app_title">番职e家</string>
    <string name="action_settings">Settings</string>
    
    <string name="left">左菜单</string>
    <string name="right">右菜单</string>
    <string name="left_and_right">双栏菜单</string>
    <string name="touch_above_none">不触发</string>
    <string name="touch_above_margin">边缘监听</string>
    <string name="touch_above_full">全屏监听</string>

    <string name="home_textview_text">← 左右拽动弹出导航栏 →</string>
    <string name="home_button_text">菜单设置</string>
    <string name="home_textview2_text"></string>
    


    <!-- 标识为菜单栏方向，无需更改 -->
    <item type="id" name="addToMenu_onclick"/>
    <!-- 标识为onclick事件，无需更改 -->
    <item type="id" name="addToMenu_direction"/>
    
    <!-- Test-Fragment -->
    <string name="test_fragment_one">社团列表</string>
    <string name="test_fragment_two">社团活动</string>
    <string name="test_fragment_three">最新消息</string>
    <string name="association_main_search_text">搜索社团信息和活动</string>
    <string name="setting_touch_textview">触发监听模式</string>
    <string name="setting_touch_mode_behind">Touch Mode Behind</string>
    <string name="setting_touch_mode_fullscreen">Fullscreen</string>
    <string name="setting_touch_mode_margin">Margin</string>
    <string name="setting_actionbar_scroll">菜单跟随滚动比例</string>
    <string name="setting_actionbar_behind_width">Behind Width</string>
    <string name="setting_shadow">菜单阴影</string>
    <string name="setting_shadow_enable">启用</string>
    <string name="setting_fade">淡出淡入效果</string>
    <string name="setting_mode">菜单模式</string>
    <string name="home_under_descript">主页页面下方区域</string>
    <string name="association_main_desc1">左导航按钮</string>
    
	<!-- 仿天天动听的菜单栏 -->
    <string name="main_slidingmenu_head_text">登录/注册</string>
    <string name="main_slidingmenu_bottom_exit_text">退出程序</string>
    
    <!-- 社团助手 -->
    <string name="filter_type">类型</string>
    
    
    
    
    
    
    
    
    
    
    
</resources>








