<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/list_padding" >

        
        <!-- 设置菜单模式 - 左,右,左右 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/list_padding"
            android:paddingTop="@dimen/list_padding" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/setting_mode"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <RadioGroup
                android:id="@+id/mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/left" />

                <RadioButton
                    android:id="@+id/right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@string/right" />
                
                <RadioButton
                    android:id="@+id/left_right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/left_and_right" 
                    android:checked="true"/>
            </RadioGroup>
            
        </LinearLayout>

        <!-- 设置触发模式 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/list_padding"
            android:paddingTop="@dimen/list_padding" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/setting_touch_textview"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <RadioGroup
                android:id="@+id/touch_above"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/touch_above_full"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/touch_above_full" />

                <RadioButton
                    android:id="@+id/touch_above_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/touch_above_margin" />

                <RadioButton
                    android:id="@+id/touch_above_none"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/touch_above_none" />
            </RadioGroup>
        </LinearLayout>

        
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/list_padding"
            android:paddingTop="@dimen/list_padding"
            android:visibility="gone" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/setting_touch_mode_behind"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <RadioGroup
                android:id="@+id/touch_behind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/touch_behind_full"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/setting_touch_mode_fullscreen" />

                <RadioButton
                    android:id="@+id/touch_behind_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_touch_mode_margin" />
            </RadioGroup>
        </LinearLayout>

        <!-- 菜单跟随滚动比例 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/list_padding"
            android:text="@string/setting_actionbar_scroll"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <SeekBar
            android:id="@+id/scroll_scale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

       
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/list_padding"
            android:text="@string/setting_actionbar_behind_width"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:visibility="gone" />

        <SeekBar
            android:id="@+id/behind_width"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

         <!-- 菜单阴影 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/list_padding" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/setting_shadow"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <CheckBox
                android:id="@+id/shadow_enabled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_shadow_enable" />
        </LinearLayout>

        <SeekBar
            android:id="@+id/shadow_width"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!-- 淡出淡入效果 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/list_padding" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/setting_fade"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <CheckBox
                android:id="@+id/fade_enabled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_shadow_enable" />
        </LinearLayout>

        <SeekBar
            android:id="@+id/fade_degree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        
        
    </LinearLayout>

    
   
</ScrollView>