<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <FrameLayout
        android:id="@+id/home_titlebar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/all_bg_color" >

        <Button
            android:id="@+id/home_titlebar_left_menu"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="left|center_vertical"
            android:layout_marginLeft="10dp"
            android:background="@drawable/home_titlebar_menu_selector" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="4dp"
            android:text="@string/app_title"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

        <Button
            android:id="@+id/home_titlebar_right_menu"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="10dp"
            android:background="@drawable/home_titlebar_menu_selector" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/home_ignored_view"
        android:layout_alignParentTop="true"
        android:gravity="center|center_vertical"
        android:orientation="vertical" >

        <!-- 使用 开源项目 GifView 来显示动态Gif -->

        <com.ant.liao.GifView
            android:id="@+id/home_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            tools:ignore="PxUsage" />

        <TextView
            android:id="@+id/home_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="false"
            android:padding="5dp"
            android:text="@string/home_textview_text"
            android:textColor="#ffacacac"
            android:textSize="17sp" />

        <Button
            android:id="@+id/home_btn_open_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:background="@drawable/home_button_selector"
            android:padding="12dp"
            android:text="@string/home_button_text"
            android:textColor="@android:color/white"
            android:textSize="17sp" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/home_ignored_view"
        android:layout_width="fill_parent"
        android:layout_height="120dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:padding="10dp" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/home_under_descript"
            android:scaleType="fitXY"
            android:src="@drawable/home_frame" />

        <TextView
            android:id="@+id/home_textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/home_textview2_text"
            android:textColor="#9a9a9a"
            android:textSize="17sp" />
    </FrameLayout>

</RelativeLayout>