<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/association_mainLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/association_main"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/searchMainHeardLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/association_main_top"
        android:gravity="center_vertical" >

        <!-- 左导航按钮 -->

        <ImageView
            android:id="@+id/heardLeftIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/association_main_desc1"
            android:paddingLeft="18.0dip"
            android:paddingRight="5.0dip"
            android:src="@drawable/association_search_heard_left_state" />

        <!-- 中央标题 -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="5.0dip"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/app_title"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            tools:ignore="InefficientWeight" />

        <!-- 右导航按钮 -->

        <ImageView
            android:id="@+id/association_search_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10.0dip"
            android:paddingLeft="30.0dip"
            android:paddingRight="20.0dip"
            android:paddingTop="10.0dip"
            android:src="@drawable/association_my_menu_state"
            tools:ignore="ContentDescription" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/association_contentLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/association_main_top"
            android:gravity="center"
            android:padding="10.0dip"
            tools:ignore="UselessParent" >

            <!-- 搜索框 -->

            <EditText
                android:id="@+id/association_search_type_et"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/association_main_search"
                android:hint="@string/association_main_search_text"
                android:imeOptions="actionSearch"
                android:singleLine="true" >

                <requestFocus />
            </EditText>
        </LinearLayout>
    </LinearLayout>

    <pyp.navigation.association.TitleIndicator
        android:id="@+id/pagerindicator"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/association_search_top_tab"
        app:footerColor="@color/tab_indicator_text_selected"
        app:footerLineHeight="2dp"
        app:footerTriangleHeight="3.0dp"
        app:textSizeNormal="@dimen/common_text_size_middle_2"
        app:textSizeSelected="@dimen/common_text_size_middle" />

    <!--
            <LinearLayout
                android:id="@+id/association_linearLayout1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/association_bg_search_top_tab"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/association_search_tabtitle1"
                    style="@style/association_search_tab"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0"
                    android:text="1对症找药" />
                
				<TextView
                    android:id="@+id/association_search_tabtitle2"
                    style="@style/association_search_tab_select"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0"
                    android:text="2分类查询" />

                <TextView
                    android:id="@+id/association_search_tabtitle3"
                    style="@style/association_search_tab"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0"
                    android:text="3品牌专区" />
            </LinearLayout>
    -->

    <pyp.navigation.association.ViewPagerCompat
        android:id="@+id/pager"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:duplicateParentState="true" />

</LinearLayout>